force-app/main/default/objects/Call_Recording__c.object
<CustomObject>
    <description>List of call recordings related to an enquiry. Data coming from Calabrio</description>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Recordings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calabrio_Image_Link__c</fullName>
        <formula>HYPERLINK(Link_To_Recording__c,IMAGE(&quot;servlet/servlet.FileDownload?file=01528000003DUG1&quot;,&quot;Calabrio recording&quot;,22,100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Duration_Number__c</fullName>
        <description>Value from Calabrio callDuration field</description>
        <label>Call Duration Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Duration__c</fullName>
        <description>Display hh:mm:ss</description>
        <label>Call Duration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Id__c</fullName>
        <externalId>true</externalId>
        <label>Call Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Call_Start_Time_Number__c</fullName>
        <description>Value from Calabrio startTime field</description>
        <label>Call Start Time Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enquiry</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Call Recordings</relationshipLabel>
        <relationshipName>Call_Recordings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_To_Recording__c</fullName>
        <description>Link to Calabrio portal which opens the actual recording of the call</description>
        <label>Calabrio Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <label>Call Recording</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Call Recording Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Recordings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>